# artifacts/api-server/src/routes/index.ts
@@ -5,6 +5,7 @@ import hotelsRouter from "./hotels";
 import offersRouter from "./offers";
 import destinationsRouter from "./destinations";
 import bookingsRouter from "./bookings";
+import holidaysRouter from "./holidays";
 
 const router: IRouter = Router();
 
@@ -14,5 +15,6 @@ router.use("/hotels", hotelsRouter);
 router.use("/offers", offersRouter);
 router.use("/destinations", destinationsRouter);
 router.use("/bookings", bookingsRouter);
+router.use("/holidays", holidaysRouter);
 
 export default router;
